# vestige

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
vestige/: __init__.py  client.py
vestige/core/: constants.py  interfaces.py
vestige/models/: models.py
vestige/network/: transport.py
vestige/scraping/: parsers.py
