[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vestige"
version = "1.0.0"
description = "Python library for getting a list of details regarding the Bulgarian State Gazette (Държавен вестник) issues"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "ytcalifax (98w)", email = "hello@98w.eu"}]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["bulgaria", "gazette", "state", "state-gazette", "dv", "darzhaven-vestnik"]
dependencies = ["requests>=2.31", "beautifulsoup4>=4.12"]

[project.urls]
Homepage = "https://github.com/ytcalifax/vestige"
Repository = "https://github.com/ytcalifax/vestige.git"
"Bug Tracker" = "https://github.com/ytcalifax/vestige/issues"
Changelog = "https://github.com/ytcalifax/vestige/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["vestige*"]
exclude = ["*__pycache__*"]

